<resources>
    <string name="app_name">Lunar Calendar</string>
    <string name="title_home">Lịch Ngày</string>
    <string name="title_dashboard">Lịch Tháng</string>
    <string name="title_notifications">Tiện Ích</string>
    <string name="double_click">Nhấn Back 2 lần liên tiếp để thoát!</string>
    <string name="gio_hoang_dao">Giờ Hoàng Đạo</string>
    <string name="ngay">Ngày:</string>
    <string name="thang">Tháng:</string>
    <string name="nam">Năm:</string>
    <string name="ngay_duong">Ngày Dương</string>
    <string name="ngay_am">Ngày Âm</string>
    <string name="gio">Giờ</string>
    <string name="ngay1">Ngày</string>
    <string name="thang1">Tháng</string>
    <string name="cn">CN</string>
    <string name="t2">T2</string>
    <string name="t3">T3</string>
    <string name="t4">T4</string>
    <string name="t5">T5</string>
    <string name="t6">T6</string>
    <string name="t7">T7</string>
</resources>